# 3DViewer

./: .gitignore
build-3D_Viewer-Qt_6_6_2_Qt_6_6_2-Debug/: Makefile  moc_mainwindow.cpp
src/: 3D_Viewer.pro  3D_Viewer.pro.user.7546191  CMakeLists.txt  Doxyfile  Makefile  affine_transformations.c  affine_transformations.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  moc_mainwindow.cpp  parcer.c  parcer.h  parser.c  parser.h  properties.c  properties.h  ui_mainwindow.h  viewer.c  viewer.h
src/.qtc_clangd/: compile_commands.json
src/.qtc_clangd/.cache/clangd/index/: QComboBox.A914F97366A4374E.idx  QIcon.B1AA502259989F0F.idx  QLineEdit.FA6EE5145DC5C743.idx  QLocale.C6932F139E76F85B.idx  QSlider.E1CCDAAF864A9052.idx  QToolBox.08F6977FC2457360.idx  __stddef_max_align_t.h.50EBE139B37E0339.idx  affine_transformations.c.E1D613F16722BB72.idx  affine_transformations.h.68DAA9F5787CC4CB.idx  cstdarg.6CC4226BB1C03ABA.idx  glwidget.cpp.766DE6EBF8DFCF79.idx  glwidget.h.167AFF26A62464F4.idx  integral_constant.h.6DE430EF162028D5.idx  inttypes.h.2DD5456769E4124B.idx  inttypes.h.DB1B1C99E706BC23.idx  limits.h.41A7A76C1B865077.idx  limits.h.936FAC89EC2DCCF5.idx  main.cpp.173E265208F6E219.idx  mainwindow.cpp.6DFACAD83A199CD9.idx  mainwindow.h.51C23ACBDD55D119.idx  math.h.D29AAE71353DE028.idx  parcer.c.09E009F4DF035456.idx  parcer.h.2D6226CC7129992B.idx  qabstractbutton.h.89009686EA6001E2.idx  qabstractitemdelegate.h.C555EC5CC4BDBF15.idx  qabstractitemmodel.h.73F81D06C69C54B2.idx  qabstractslider.h.9E3ACF3D26673C31.idx  qabstractspinbox.h.B49F26902FC08E7E.idx  qbytearray.h.75A2642A35481DB5.idx  qbytearrayalgorithms.h.3D02A2E72829FBFB.idx  qcombobox.h.2C0F4B948F35446A.idx  qcompilerdetection.h.AD399AF74606974F.idx  qcoreevent.h.FE277681F914908D.idx  qfiledialog.h.8FE5CBB9989A98A2.idx  qflags.h.533DFEAC5CD3B8DC.idx  qframe.h.045C1569330B5686.idx  qkeysequence.h.86BF679C2C15137F.idx  qlineedit.h.EEF702413BA069F1.idx  qlocale.h.10363E05C73CBDEC.idx  qmetatype.h.068BB47E7A69A1CD.idx  (+26 more)
src/back/: viewer.c  viewer.h
src/build-3D_Viewer-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
src/include/: affine_transformations.h  mainwindow.h  parser.h
src/make/: Makefile
src/modules_C/: affine_transformations.c  parser.c
src/modules_Qt/: glwidget.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
src/open_file/: Makefile  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parcer.c  parcer.h
src/qt/: 3D_Viewer.pro  affine_transformations.c  affine_transformations.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.c  parser.h
src/qt/QtGifImage/gifimage/: qgifglobal.h
src/tests/: s21_affin_rotate_test.c  s21_affin_scale_test.c  s21_affin_shift_test.c  s21_parcer.c  s21_parser.c  s21_test.c  s21_test.h  test.c
tests/: Makefile  s21_affin_rotate_test.c  test.c  (+5 more)
